--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </div>
     <!--/Title --> 
   </div>
-	<section="Portfolio">
+	<section id="Portfolio">
     
     <section class="slideshow">
        <div class="content">
